# distilbert-senator-tweets

./: .gitignore  Pipfile  README.md  app.py  app_zero_shot.py  embed_tweets.ipynb  finetune.ipynb  finetune_binary_full_architecture_pt.ipynb  finetune_full_architecture_tf.ipynb  finetune_full_architecture_tftrainer.ipynb  get_members_data.py  get_tweets.ipynb  get_tweets.py  notebook.ipynb  pyproject.toml  requirements.txt  validate.py
.github/workflows/: codeql-analysis.yml
data/: congress_twitter_house.csv  congress_twitter_senate.csv  senators.csv  senators_results.csv  senators_usernames.csv
notebooks/: finetune_distilbert_senator_tweets_pt.ipynb  get_senator_usernames.py  get_tweets.py  get_tweets_snscape.py  get_tweets_tweepy.py
plots/: tweets-by-party.html  tweets-by-senator.html
