[tool.poetry]
name = "rep-or-dem-tweets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
tweepy = "^4.1.0"
pandas = "^1.3.4"
ipykernel = "^6.4.2"
streamlit = "^1.1.0"
transformers = "^4.11.3"
psutil = "^5.8.0"
torch = "^1.10.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
